--- a/domchallenge/calender/index.html
+++ b/domchallenge/calender/index.html
@@ -33,6 +33,14 @@
             display : flex;
             align-items : flex-end;
         }
+        .timeslot
+        {
+            position : absolute;
+            margin : 5px;
+            width : 100%;
+            border-radius : 7px;
+            padding : 5px;
+        }
 
     </style>
     <script  src="index.js">
