add comments and make changes to refactor the code

--- a/domchallenge/calender/index.html
+++ b/domchallenge/calender/index.html
@@ -36,11 +36,19 @@
         .timeslot
         {
             position : absolute;
-            margin : 5px;
-            width : 100%;
             border-radius : 7px;
             padding : 5px;
+            display: flex;
+            flex-direction: column;
+            align-items: self-start;
+            justify-content: start;
         }
+
+        .timeslot h1, h2 {
+            margin: 0px;
+        }
+
+
 
     </style>
     <script  src="index.js">
